# marker-serve

./: .env.example  Dockerfile  Dockerfile.dev  README.md  cli_options.txt  main.py  makefile  pyproject.toml
.github/workflows/: ci.yaml
hurl/v1/convert/: post.hurl
src/api/v1/: auth.py  core.py
src/core/config/: env.py  marker.py
src/core/logging/: __init__.py  chalk.py
src/modules/marker/: routers.py  schemas.py
src/modules/marker/services/: __init__.py  image.py  map_reduce.py  pdf.py
