[project]
name = "marker-serve"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "hypercorn>=0.18.0",
    "marker-pdf>=1.8.2",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.20",
    "rich>=14.0.0",
    "uvicorn>=0.35.0",
]

[tool.ruff]
select = ["E", "F", "I", "B", "C4", "ARG", "SIM", "PTH", "RUF", "ANN"]
indent-width = 4
target-version = "py310"
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint]
isort.combine-as-imports = true
isort.force-wrap-aliases = true
extend-select = ["I"]
fixable = ["ALL"]
unfixable = []
ignore = ["E203", "E501"]
select = ["E", "F", "W", "Q", "I", "ANN"]
